<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_email_black_24dp"
            android:title="@string/message" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/chat" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/profile" />

    </group>

    <item android:title="@string/other_methods_for_drawer">

        <menu>

            <item
                android:id="@+id/navComponentController"
                android:title="with naviagtion controller component" />

            <item
                android:id="@+id/usingButton"
                android:title="with custom click button" />

        </menu>

    </item>

    <item android:title="@string/others">

        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_black_24dp"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_send_black_24dp"
                android:title="@string/send" />

        </menu>
    </item>
</menu>